@@ -1246,6 +1246,18 @@ attribute_def svr_attr_def[] =
    PARENT_TYPE_SERVER
   },
 
+  /* SRV_ATR_NoMailForce */
+  {ATTR_nomailforce,		/* "no_mail_force" */
+   decode_b,
+   encode_b,
+   set_b,
+   comp_b,
+   free_null,
+   NULL_FUNC,
+   MGR_ONLY_SET,
+   ATR_TYPE_LONG,
+   PARENT_TYPE_SERVER},
+
   /* site supplied server attribute definitions if any, see site_svr_attr_*.h  */
 #include "site_svr_attr_def.h"
 
